Création du header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guide Kyoto</title>
     <meta name="description" content="Visitez Tokyo de la meilleure des façons, avec un guide !">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/TokyoTour/LaboCSS/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,24 +16,24 @@
     <header id="accueil">
 
         <div class="home-banner">
-        <nav>
-            <a href="#Accueil">Accueil</a>
-            <a href="#Quartiers">Quartiers</a>
-            <a href="#Tarifs">Tarifs</a>
-            <a href="#Contact">Contact</a>
-        </nav>
 
-        <h1 class="website-title">Tokyo Tour</h1>
+          <h1 class="website-title">Tokyo Tour</h1>
+
+        <nav>
+            <a href="#Accueil" id="link">Accueil</a>
+            <a href="#Quartiers" id="link">Quartiers</a>
+            <a href="#Tarifs" id="link">Tarifs</a>
+            <a href="#Contact" id="link">Contact</a>
+        </nav>
 
         </div>
 
         <div class="hero-section" id="accueil">
             <h1 class="main-title">Découvrez Tokyo</h1>
 
-            <button class="hero-btn hero-btn-1">Tarifs</button>
+            <button class="hero-btn hero-btn-1">Quartiers</button>
             <button class="hero-btn hero-btn-2">Contact</button>
 
-            <img src="ressources/Tokyo-GTA.jpg" alt="tokyo street">
         </div>
         
     </header>
