--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guide Kyoto</title>
+    <title>Tokyo Tour</title>
     <meta name="description" content="Visitez Tokyo de la meilleure des façons, avec un guide !">
     <link rel="stylesheet" href="/TokyoTour/LaboCSS/style.css" />
+    <link rel="stylesheet" href="/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./ressources/icons-pack/046-kimono.svg">
+    <link rel="icon" type="image/x-icon" href="./ressources/japan-favicon.jpg">
   </head>
   <body>
 
