Ajout de la section Quartiers + Responsive design de cette section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./ressources/japan-favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="./ressources/japan-faviconBis.png">
   </head>
   <body>
 
@@ -21,10 +21,10 @@
           <h1 class="website-title">Tokyo Tour</h1>
 
         <nav>
-            <a href="#Accueil" id="link">Accueil</a>
-            <a href="#Quartiers" id="link">Quartiers</a>
-            <a href="#Tarifs" id="link">Tarifs</a>
-            <a href="#Contact" id="link">Contact</a>
+            <a href="#accueil" id="link">Accueil</a>
+            <a href="#quartiers" id="link">Quartiers</a>
+            <a href="#tarifs" id="link">Tarifs</a>
+            <a href="#contact" id="link">Contact</a>
         </nav>
 
         </div>
@@ -39,5 +39,45 @@
         
     </header>
 
+    <main>
+      <section class="quartier-section" id="quartiers">
+      
+        <div class="negativ-container container">
+  
+          <p class="surtitle">Les quartiers populaires</p>
+          <h2 class="heading-2">Que faire à Tokyo ?</h2>
+  
+          <div class="quartier-container quartier-1">
+            <img src="ressources/akihabara.jpg" alt="quartier akihabara">
+            <div class="quartier-description">
+              <h3 class="quartier-heading">Découvrez la capitale de la pop-culture japonaise.</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolor explicabo laudantium suscipit perferendis, quos fugiat doloribus! Soluta eum molestias ex nostrum, quibusdam maxime veniam.</p>
+  
+              <a class="quartier-link" href="#contact">Plannifier un tour</a>
+            </div>
+          </div>
+  
+          <div class="quartier-container quartier-2">
+            <div class="quartier-description">
+              <h3 class="quartier-heading">Visitez de splendides temples.</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolor explicabo laudantium suscipit perferendis, quos fugiat doloribus! Soluta eum molestias ex nostrum, quibusdam maxime veniam.</p>
+              <a class="quartier-link" href="#contact">Plannifier un tour</a>
+            </div>
+            <img src="ressources/asakusa.jpg" alt="quartier asakusa">
+          </div>
+  
+          <div class="quartier-container quartier-3">
+            <img src="ressources/shibuya.jpg" alt="quartier shibuya">
+            <div class="quartier-description">
+              <h3 class="quartier-heading">Envie de faire la fête ?</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolor explicabo laudantium suscipit perferendis, quos fugiat doloribus! Soluta eum molestias ex nostrum, quibusdam maxime veniam.</p>
+              <a class="quartier-link" href="#contact">Plannifier un tour</a>
+            </div>
+          </div>
+
+        </div>
+
+        </section>
+      </main>
   </body>
 </html>
