changement kyoto en tokyo + ajout orange

--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
       
       <section class="contact">
         <div class="rounded-contact" id="contact">
-            <p class="surtitle">Partageons de bons moments !</p>
-            <h2 class="heading-2">Voilà où tu peux me contacter</h2>
+            <p class="surtitle">Partagez de bons moments !</p>
+            <h2 class="heading-2">Mes contacts</h2>
 
             <ul class="contact-list">
                  <li>
-                    <span>kyoto_tour@gmail.com</span>
+                    <span>tokyo_tour@gmail.com</span>
                     <img src="ressources/email-envelope.svg" alt="email">
                   </li>
                   <li>
-                     <a href="#">kyoto_tour_IG</a>
+                     <a href="#">tokyo_tour_IG</a>
                     <img src="ressources/instagram.svg" alt="email">
                   </li>
                   <li>
-                    <a href="#">kyoto_tour_FB</a>
+                    <a href="#">tokyo_tour_FB</a>
                     <img src="ressources/facebook.svg" alt="email">
                   </li>
             </ul>
